Index.html updated

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="footer gap-3 order-4 lg:flex lg:row-start-3 lg:col-span-3 mb-3">
           <div class="footer__item flex items-center gap-3 mb-3">
             <div class="footer__image">
-              <img src="/assets/images/image-retro-pcs.jpg" alt="image-retro-pcs" />
+              <img src="./assets/images/image-retro-pcs.jpg" alt="image-retro-pcs" />
             </div>
             <div
               class="footer__content flex flex-col justify-between py-4 gap-4"
@@ -166,7 +166,7 @@
           </div>
           <div class="footer__item flex items-center gap-3 mb-3">
             <div class="footer__image">
-              <img src="/assets/images/image-top-laptops.jpg" alt="image-top-laptops" />
+              <img src="./assets/images/image-top-laptops.jpg" alt="image-top-laptops" />
             </div>
             <div
               class="footer__content flex flex-col justify-between py-4 gap-4"
@@ -188,7 +188,7 @@
           </div>
           <div class="footer__item flex items-center gap-3">
             <div class="footer__image">
-              <img src="/assets/images/image-gaming-growth.jpg" alt="image-gaming-growth" />
+              <img src="./assets/images/image-gaming-growth.jpg" alt="image-gaming-growth" />
             </div>
             <div
               class="footer__content flex flex-col justify-between py-4 gap-4 mb-3"
